--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -6,9 +6,11 @@
     "colors_text": "#121212",
     "colors_outline_button_labels": "#121212",
     "colors_background_1": "#FFFFFF",
-    "colors_background_2": "#F3F3F3",
+    "colors_background_2": "#000000",
     "type_header_font": "lato_n3",
     "type_body_font": "lato_n3",
+    "social_facebook_link": "https:\/\/facebook.com\/shopify",
+    "social_instagram_link": "http:\/\/instagram.com\/shopify",
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
@@ -16,7 +18,9 @@
           "announcement-bar-0": {
             "type": "announcement",
             "settings": {
-              "color_scheme": "background-1"
+              "text": "Welcome to our store",
+              "color_scheme": "background-1",
+              "link": ""
             }
           }
         },
@@ -25,8 +29,71 @@
         ],
         "settings": {
         }
+      },
+      "header": {
+        "type": "header",
+        "settings": {
+          "logo": "shopify:\/\/shop_images\/Jinx_Logo_white.png",
+          "logo_width": 100,
+          "logo_position": "middle-left",
+          "menu": "main-menu",
+          "show_line_separator": true,
+          "enable_sticky_header": true
+        }
+      },
+      "footer": {
+        "type": "footer",
+        "blocks": {
+          "footer-0": {
+            "type": "link_list",
+            "settings": {
+              "heading": "Navigation",
+              "menu": "footer"
+            }
+          },
+          "51185286-0b70-4323-a41d-b34d448fdf31": {
+            "type": "link_list",
+            "settings": {
+              "heading": "About",
+              "menu": "footer"
+            }
+          },
+          "b1753a9a-ce7d-4704-9526-83f4e87e51d7": {
+            "type": "link_list",
+            "settings": {
+              "heading": "Support",
+              "menu": "footer-menu-3"
+            }
+          },
+          "abb4fd5b-1676-435d-bd57-1b17c654309f": {
+            "type": "image",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/Jinx_Logo_white.png",
+              "image_width": 100,
+              "alignment": "center"
+            }
+          }
+        },
+        "block_order": [
+          "footer-0",
+          "51185286-0b70-4323-a41d-b34d448fdf31",
+          "b1753a9a-ce7d-4704-9526-83f4e87e51d7",
+          "abb4fd5b-1676-435d-bd57-1b17c654309f"
+        ],
+        "settings": {
+          "color_scheme": "background-2",
+          "newsletter_enable": true,
+          "newsletter_heading": "Subscribe to our emails",
+          "show_social": false,
+          "enable_country_selector": true,
+          "enable_language_selector": true,
+          "payment_enable": true
+        }
       }
-    }
+    },
+    "content_for_index": [
+
+    ]
   },
   "presets": {
     "Default": {
